# dnd

./: Cargo.toml  install.sh
.cargo/: config
.github/workflows/: rust.yml
src/: args.rs  main.rs  roll.rs
wix/: key.p12  main.wxs
