[package]
name = "dnd"
version = "0.1.0"
authors = ["Elliot <eokovacs1@gmail.com>"]
description = "A tool to roll dice for tabletop games"
edition = "2018"

[package.metadata.bundle]
name = "Dnd Dice Roller"
identifier = "tech.elliotsworld.dnd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.15"
serde = { version = "1.0.114", features = ["derive"] }
toml = "0.5.6"
rand = "0.7.3"
regex = "1.3.9"
anyhow = "1.0.31"
colored = "1.9"
